# video-manager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  db.py  deps.py  main.py  media.py  models.py  ordering.py  rclone.py  repository.py  scanner.py  web.py
app/routes/: board.py  columns.py  notes.py  videos.py
app/static/: app.css  app.js
app/templates/: _board.html  _card.html  _column.html  _note.html  _note_edit.html  base.html  board.html  video_detail.html
migrations/: env.py
migrations/versions/: 0001_init.py
tests/: conftest.py  test_api.py  test_scanner.py
